--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="20dp"
+    android:padding="24dp"
+    android:gravity="center_horizontal"
+    android:background="#CCFFCC"
     tools:context=".MainActivity">
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/et_a"
-        android:layout_margin="20dp"
-        android:hint="Enter a "/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/et_b"
-        android:layout_margin="20dp"
-        android:hint="Enter b "/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_add"
-            android:layout_margin="4dp"
-            android:text="+"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_subtraction"
-            android:layout_margin="4dp"
-            android:text="-"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_multiplication"
-            android:layout_margin="4dp"
-            android:text="*"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_division"
-            android:layout_margin="4dp"
-            android:text="/"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_square"
-            android:layout_margin="4dp"
-            android:text="/"/>
-    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Result "
-        android:textSize="24sp"
-        android:layout_margin="20dp"
+        android:text="Calculadora Kotlin"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:textColor="#0F4D0F"
+        android:gravity="center"
+        android:layout_marginBottom="16dp" />
+    <TextView
         android:id="@+id/result_tv"
-        android:gravity="center"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Resultado:"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textColor="#0F4D0F"
+        android:gravity="center"
+        android:padding="16dp"
+        android:background="#5CE65C"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:radius="12dp" />
+    <EditText
+        android:id="@+id/et_a"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:hint="Digite o valor de A"
+        android:backgroundTint="#008000"
+        android:textColor="#003300"
+        />
+
+    <EditText
+        android:id="@+id/et_b"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:hint="Digite o valor de B"
+        android:backgroundTint="#008000"
+        android:textColor="#003300"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginBottom="20dp">
+
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="+"
+            android:textSize="20sp"
+            android:backgroundTint="#008000"
+            android:textColor="#FFFFFF"
+            android:layout_margin="6dp" />
+
+        <Button
+            android:id="@+id/btn_subtraction"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="-"
+            android:textSize="20sp"
+            android:backgroundTint="#008000"
+            android:textColor="#FFFFFF"
+            android:layout_margin="6dp" />
+
+        <Button
+            android:id="@+id/btn_multiplication"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="×"
+            android:textSize="20sp"
+            android:backgroundTint="#008000"
+            android:textColor="#FFFFFF"
+            android:layout_margin="6dp" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginBottom="20dp">
+    <Button
+        android:id="@+id/btn_division"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="÷"
+        android:textSize="20sp"
+        android:backgroundTint="#008000"
+        android:textColor="#FFFFFF"
+        android:layout_margin="6dp" />
+
+    <Button
+        android:id="@+id/btn_square"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="^"
+        android:textSize="20sp"
+        android:backgroundTint="#008000"
+        android:textColor="#FFFFFF"
+        android:layout_margin="6dp" />
+    <Button
+        android:id="@+id/btn_clear"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="C"
+        android:textSize="20sp"
+        android:backgroundTint="#008000"
+        android:textColor="#FFFFFF"
+        android:layout_margin="6dp" />
+    </LinearLayout>
 
 </LinearLayout>
